--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.nemes">
    <application
-        android:label="nemes"
+        android:label="Nemes dilini öwren! Offline"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
