--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: 'nemes'
-description: Nemes dilini öwren!
+name: "nemes"
+description: "Nemes dilini öwren! Offline"
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -73,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/img/
     # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
