--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,16 +6,17 @@ name: "Build & Release"
 jobs:
   build-android:
     name: Build android and release
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '12.x'
-      
-      - uses: subosito/flutter-action@v1
-      - run: flutter pub get
+      - name: Setup Flutter SDK
+        uses: flutter-actions/setup-flutter@v2
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Build apk
       - run: flutter build apk --split-per-abi
 
       - name: Push to Releases
