--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,15 @@ jobs:
 
       - name: Setup Flutter SDK
         uses: flutter-actions/setup-flutter@v2
+        with:
+          channel: stable
+          version: 3.0.5
 
       - name: Install dependencies
         run: flutter pub get
 
       - name: Build apk
-      - run: flutter build apk --split-per-abi
+        run: flutter build apk --split-per-abi
 
       - name: Push to Releases
         uses: ncipollo/release-action@v1
